testdata/test/resources/com/yafred/asn1/test/should_fail/tagging_value_not_defined.asn
-- defined value not found for tag (even not supported yet)

Sequence DEFINITIONS ::= BEGIN

Seq1  ::= [APPLICATION 0] SEQUENCE {
  a [un] INTEGER, 
  b [2] INTEGER
}

END